# mapix.io-web

./: API.hs  Application.hs  FlickrCrawler.hs  Foundation.hs  Import.hs  Model.hs  Settings.hs  devel.hs  mapix-web.cabal
Handler/: Demo.hs  Home.hs
Import/: NoFoundation.hs
app/: devel.hs
config/: routes  settings.yml  sqlite.yml
flickr/: FlickrCrawler.hs  FlickrPushToAPI.hs  Util.hs
templates/: default-layout-wrapper.hamlet  default-layout.hamlet  default-layout.lucius  demo.hamlet  demo.julius  demo.lucius  homepage.hamlet  homepage.julius  homepage.lucius
