name:              mapix-web
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: API
                     Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.2.5      && < 1.3
                 , yesod-core                    >= 1.2.12     && < 1.3
                 , yesod-auth                    >= 1.3        && < 1.4
                 , yesod-static                  >= 1.2        && < 1.3
                 , yesod-form                    >= 1.3        && < 1.4
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 2.0.2      && < 3.0
                 , persistent-sqlite             >= 2.0.0.1    && < 3.0
                 , persistent-template           >= 2.0.1      && < 3.0
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.1
                 , data-default
                 , aeson                         >= 0.6        && < 0.9
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.3
                 , wai-logger                    >= 2.2        && < 2.3

                 , aeson                         >= 0.8        && < 0.9
                 , http-client-tls               >= 0.2.2      && < 0.3
                 , lens                          >= 4.4.0.1    && < 5.0
                 , lens-aeson                    >= 1          && < 2
                 , mtl                           >= 2.2.1      && < 3
                 , transformers                  >= 0.4        && < 0.5
                 , wreq                          >= 0.2        && < 0.3

    -- see https://github.com/yesodweb/yesod/issues/814
    if !os(windows)
        build-depends: unix

executable         mapix-web
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , mapix-web
                     , yesod

    ghc-options:        -Wall -O2 -rtsopts -threaded -with-rtsopts=-N

executable      flickr-crawler
    main-is:            FlickrCrawler.hs
    hs-source-dirs:     flickr
    ghc-options:        -Wall -O2 -rtsopts -threaded

    build-depends: base                         >= 4            && < 5
                 , bytestring                   >= 0.10.0.2     && < 1
                 , containers                   >= 0.5          && < 1
                 , deepseq                      > 1.3           && < 2
                 , directory                    >= 1.2          && < 2
                 , filepath                     >= 1.3          && < 2
                 , flickr                       >= 0.3.3        && < 0.4
                 , http-client                  >= 0.4          && < 0.5
                 , http-client-tls              >= 0.2.2        && < 0.3
                 , lens                         >= 4.4.0.1      && < 5.0
                 , mapix-web
                 , monad-logger                 >= 0.3.3.1      && < 0.4
                 , parallel                     >= 3.2          && < 4
                 , persistent                   >= 2.0.2        && < 3.0
                 , persistent-sqlite            >= 2.0.0.1      && < 3.0
                 , random                       >= 1.0.1.1      && < 2
                 , random-shuffle               >= 0.0.4        && < 0.1
                 , text                         >= 0.11         && < 2.0
                 , transformers                 >= 0.4          && < 0.5
                 , wreq                         >= 0.2          && < 0.3

executable      flickr-push-to-api
    main-is:            FlickrPushToAPI.hs
    hs-source-dirs:     flickr
    ghc-options:        -Wall -O2 -rtsopts -threaded

    build-depends: base                         >= 4            && < 5
                 , bytestring                   >= 0.10.0.2     && < 1
                 , containers                   >= 0.5          && < 1
                 , directory                    >= 1.2          && < 2
                 , filepath                     >= 1.3          && < 2
                 , http-client                  >= 0.4          && < 0.5
                 , http-client-tls              >= 0.2.2        && < 0.3
                 , http-conduit                 >= 2.1          && < 2.2
                 , lens                         >= 4.4.0.1      && < 5.0
                 , mapix-web
                 , monad-logger                 >= 0.3.3.1      && < 0.4
                 , mtl                          >= 2.2.1        && < 3
                 , persistent                   >= 2.0.2        && < 3.0
                 , persistent-sqlite            >= 2.0.0.1      && < 3.0
                 , text                         >= 0.11         && < 2.0
                 , transformers                 >= 0.4          && < 0.5
                 , wreq                         >= 0.2          && < 0.3
