name:              mapix-web
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: API
                     Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Model
                     Settings
                     Settings.StaticFiles
                     Handler.Demo
                     Handler.Home

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions:     TemplateHaskell
                    QuasiQuotes
                    OverloadedStrings
                    NoImplicitPrelude
                    CPP
                    MultiParamTypeClasses
                    TypeFamilies
                    GADTs
                    GeneralizedNewtypeDeriving
                    FlexibleContexts
                    EmptyDataDecls
                    NoMonomorphismRestriction
                    DeriveDataTypeable
                    RecordWildCards

    build-depends: base                         >= 4            && < 5
                 , yesod                        >= 1.4.1        && < 1.5
                 , yesod-core                   >= 1.4.6        && < 1.5
                 , yesod-static                 >= 1.4.0.3      && < 1.5
                 , yesod-form                   >= 1.4.0        && < 1.5
                 , classy-prelude               >= 0.10.2
                 , classy-prelude-conduit       >= 0.10.2
                 , classy-prelude-yesod         >= 0.10.2
                 , bytestring                   >= 0.9          && < 0.11
                 , text                         >= 0.11         && < 2.0
                 , persistent                   >= 2.0.2        && < 2.2
                 , persistent-sqlite            >= 2.1.1        && < 2.2
                 , persistent-template          >= 2.0.1        && < 2.2
                 , template-haskell
                 , shakespeare                  >= 2.0          && < 2.1
                 , hjsmin                       >= 0.1          && < 0.2
                 , monad-control                >= 0.3          && < 1.1
                 , wai-extra                    >= 3.0          && < 3.1
                 , yaml                         >= 0.8          && < 0.9
                 , http-conduit                 >= 2.1          && < 2.2
                 , directory                    >= 1.1          && < 1.3
                 , warp                         >= 3.0          && < 3.1
                 , data-default
                 , aeson                        >= 0.6          && < 0.9
                 , conduit                      >= 1.0          && < 2.0
                 , monad-logger                 >= 0.3          && < 0.4
                 , fast-logger                  >= 2.2          && < 2.3
                 , wai-logger                   >= 2.2          && < 2.3
                 , file-embed

                 , aeson                        >= 0.8          && < 0.9
                 , http-client-tls              >= 0.2.2        && < 0.3
                 , lens                         >= 4.4.0.1      && < 5.0
                 , lens-aeson                   >= 1            && < 2
                 , mtl                          >= 2.2.1        && < 3
                 , transformers                 >= 0.4.1.0      && < 0.5
                 , wreq                         >= 0.4.0.0      && < 0.5

    -- see https://github.com/yesodweb/yesod/issues/814
    if !os(windows)
        build-depends: unix

executable         mapix-web
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , mapix-web

    ghc-options:        -Wall -O2 -rtsopts -threaded -with-rtsopts=-N
